# on-demand-feature-endpoint

./: .gitignore  README.md  pyproject.toml
fe_endpoint_prototype/: 01_generate_synthetic_payloads.ipynb  02_build_wheel.ipynb  03_log_and_deploy.ipynb  04_test_fe_endpoint.ipynb  05_build_and_deploy_app.ipynb  06_compare_endpoints.ipynb  README.md
fe_endpoint_prototype/app/: app.py  app.yaml  models.py  requirements.txt  samples.json  transformer_loader.py  ui.py
fe_endpoint_prototype/load_testing/: README.md  fast_load_test.py  input.json  load_test_noteboo.ipynb
fe_endpoint_prototype/wheel_src/: pyproject.toml
fe_endpoint_prototype/wheel_src/claims_fe/: __init__.py  lexicons.py  transformer.py
fe_endpoint_prototype/wheel_src/claims_fe/features/: __init__.py  structural.py  temporal.py  text_flags.py
